test: service layer unit tests